# filesync

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
docs/: PRD.md  app-module-boundaries.md  manual-regression-checklist.md
res/: app.manifest  app.rc
src/: app.rs  i18n.rs  main.rs  messages.rs  tray.rs
src/app/: chrome.rs  config_io.rs  dialogs.rs  flow.rs  preview_scan.rs  runtime.rs  schedule.rs  shell.rs  state.rs  strings.rs  support.rs  validation.rs
src/config/: storage.rs
src/engine/: copier.rs  copy_pipeline.rs  delete.rs  delete_pipeline.rs  delta.rs  diff.rs  events.rs  executor.rs  hash.rs  interaction.rs  messages.rs  mod.rs  scan_plan.rs  scanner.rs
src/fs/: long_path.rs  mod.rs  replace.rs  usn_journal.rs  volume.rs
src/log/: app_log.rs  mod.rs  sync_log.rs
src/model/: config.rs  job.rs  mod.rs  preview.rs  runtime.rs  session.rs
src/ui/: job_editor.rs  job_list.rs  mod.rs  preview.rs  progress.rs
